edited an error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main class="card">
       <div class="img">
-        <img src="/images/illustration-hero.svg" alt="" />
+        <img src="images/illustration-hero.svg" alt="" />
       </div>
       <div class="info">
         <h1 class="text-center">Order Summary</h1>
@@ -31,7 +31,7 @@
         </p>
         <div class="subscription">
             <div class="plan">
-              <img src="/images/icon-music.svg" alt="" />
+              <img src="images/icon-music.svg" alt="" />
               <div class="price">
                 <p>Annual Plan</p>
                 <p>$59.99/year</p>
